--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pytest-asyncio>=1.1.0",
     "python-dotenv>=1.1.1",
     "tenacity>=9.0.0",
+    "tqdm>=4.66.0",
     "uvicorn>=0.35.0",
     "watchdog>=6.0.0",
 ]
