Enhance monitoring and logging capabilities in PD Graphiti Service
- Added new dependencies for monitoring and logging: prometheus-client, prometheus-fastapi-instrumentator, structlog, and psutil.
- Introduced structured logging configuration to improve log management and error tracking.
- Implemented a comprehensive configuration validation system to ensure proper service setup and external connection testing.
- Created a deployment script for Docker to streamline service management and environment setup.
- Updated Docker configurations to support new logging and monitoring features.

These changes significantly improve the observability and reliability of the PD Graphiti Service, facilitating better performance tracking and error handling.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -88,11 +88,21 @@ services:
       # Application Configuration
       - GRAPHITI_GROUP_ID=${GRAPHITI_GROUP_ID:-pd_target_discovery}
       - EXPORT_DIRECTORY=/app/exports
+      
+      # Logging Configuration
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - LOG_FORMAT=${LOG_FORMAT:-json}
+      - ENABLE_REQUEST_LOGGING=${ENABLE_REQUEST_LOGGING:-true}
+      
+      # Monitoring Configuration
+      - ENABLE_MONITORING=${ENABLE_MONITORING:-true}
+      - ENABLE_PROMETHEUS=${ENABLE_PROMETHEUS:-true}
+      - METRICS_PATH=${METRICS_PATH:-/metrics}
+      
+      # Service Configuration
       - HOST=0.0.0.0
       - PORT=8000
       - METRICS_PORT=8001
-      - ENABLE_MONITORING=${ENABLE_MONITORING:-true}
       
       # OpenAI Configuration
       - MODEL_NAME=${MODEL_NAME:-gpt-4o-mini}
