--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,9 @@ dependencies = [
     "tqdm>=4.66.0",
     "uvicorn>=0.35.0",
     "watchdog>=6.0.0",
+    # Monitoring and logging dependencies
+    "prometheus-client>=0.21.1",
+    "prometheus-fastapi-instrumentator>=7.0.0",
+    "structlog>=24.4.0",
+    "psutil>=6.1.0",
 ]
