--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,17 @@
 [tool:pytest]
 asyncio_mode = auto
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
 markers =
     asyncio: mark test as async
+    unit: mark test as unit test
+    integration: mark test as integration test
+    load: mark test as load/performance test (long-running)
+    reliability: mark test as reliability/failure injection test  
+    monitoring: mark test as monitoring validation test
+    slow: mark test as slow running (>30s)
+    requires_neo4j: mark test as requiring real Neo4j connection
+    requires_openai: mark test as requiring OpenAI API access
