--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,6 @@ dependencies = [
     "prometheus-fastapi-instrumentator>=7.0.0",
     "structlog>=24.4.0",
     "psutil>=6.1.0",
+    # Dagster Pipes for real-time communication
+    "dagster-pipes>=1.8.7",
 ]
